[package]
name = "sim2h"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simulation of lib3h"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "readme.md"
documentation = "https://github.com/holochain/sim2h"
repository = "https://github.com/holochain/sim2h"

[dependencies]
hcid = "=0.0.6"
holochain_persistence_api = "=0.0.8"
holochain_json_api = "=0.0.17"
detach = "=0.0.13"
lib3h = { git = "https://github.com/holochain/lib3h", branch = "transport-disconnect" }
lib3h_protocol = { git = "https://github.com/holochain/lib3h", branch = "transport-disconnect" }
lib3h_zombie_actor = { git = "https://github.com/holochain/lib3h", branch = "transport-disconnect" }
holochain_tracing = "=0.0.1"
#holochain_core_types = "=0.0.8"
holochain_core_types = { git = "https://github.com/holochain/holochain-rust", branch = "sim2h" }
uuid = { version = "0.4", features = ["v4"] }
log = "=0.4.8"
env_logger = "=0.6.1"
lazy_static = "=1.2.0"
url = "=2.1.0"
crossbeam-channel = "=0.3.8"
snowflake = "=1.3.0"
parking_lot = "=0.8.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = "=1.0.39"
rand = "0.7.2"
