[package]
name = "sim2h_server"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simulation of lib3h - server executable"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "readme.md"
documentation = "https://github.com/holochain/sim2h"
repository = "https://github.com/holochain/sim2h"

[dependencies]
sim2h = { path = "../sim2h" }
lib3h = { git = "https://github.com/holochain/lib3h", branch = "201910/version-0.0.11" }
lib3h_protocol = { git = "https://github.com/holochain/lib3h", branch = "201910/version-0.0.11" }
detach = { git = "https://github.com/holochain/lib3h", branch = "201910/version-0.0.11" }
log = "0.4.8"
