[package]
name = "sim2h_server"
version = "0.0.1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "A simulation of lib3h - server executable"
keywords = ["holochain", "holo", "p2p", "network", "simulation"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "readme.md"
documentation = "https://github.com/holochain/sim2h"
repository = "https://github.com/holochain/sim2h"

[dependencies]
sim2h = { path = "../sim2h" }
lib3h = "=0.0.13"
lib3h_protocol = "=0.0.13"
detach = "=0.0.13"
log = "0.4.8"
env_logger = "0.7.0"